...
    "repositorySettingsLabel": "repository settings",
    "addBranchLabel": "add branch",
    "deselectDirLabel": "deselect directory",
    "selectDirLabel": "select directory",
    "syncMessagesLabel": "disable/enable sync messages",
    "backLabel": "back",
    "authDropdownLabel": "auth dropdown",


    "@@x-PAID_FEATURES": "",
    "premiumDialogTitle": "Unlock Premium",
    "restorePurchase": "Restore Purchase",
    "verifyGhSponsorTitle": "Verify GitHub Sponsorship",
...
