...
                                          icon: FaIcon(
                                            Platform.isIOS ? FontAwesomeIcons.gitAlt : gitea_logo,
                                            color: Platform.isIOS ? colours.primaryLight : colours.giteaGreen,
                                            size: textSM,
                                          ),
                                          label: Text(
                                            "GITEA",
                                            style: TextStyle(
                                              color: colours.primaryLight,
                                              fontSize: textMD,
                                              fontFamily: "AtkinsonHyperlegible",
                                              fontWeight: FontWeight.bold,
                                            ),
...
