appId: com.viscouspot.gitsync
---
- runFlow: ../assert.yaml
- runFlow:
    when:
      notVisible: "GITEA"
    commands:
      - tapOn: ".*auth dropdown"
      - assertVisible: "GITEA"
      - tapOn: "GITEA"
- tapOn: "OAUTH"
